// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListHeader correctly multiple expenses 1`] = `
<div>
  <p>
    You are viewing 3 expenses
    
    for total of $1,141.95
  </p>
</div>
`;

exports[`should render ExpenseListHeader correctly single expense 1`] = `
<div>
  <p>
    You are viewing 1 expense
    
    for total of $1.95
  </p>
</div>
`;
